2025-12-31  Markus Gans  <guru.mail@muenster.de>
	* The unicode_to_utf8 function now returns the fixed-size 
	  struct UTF8_Char instead of an std::string object
	* Pointers to strings are used more frequently in string processing 
	  to avoid making unnecessary copies of strings

2025-11-23  Markus Gans  <guru.mail@muenster.de>
	* Refactoring of FString::toLong() and FString::toULong()

2025-11-18  Markus Gans  <guru.mail@muenster.de>
	* The FVTerm::addLayer() method decreases the range of saved vertical 
	  adjustments

2025-11-09  Markus Gans  <guru.mail@muenster.de>
	* The virtual terminal allows for faster tracking of changes by also 
	  saving vertical adjustments

2025-10-20  Markus Gans  <guru.mail@muenster.de>
	* The rotozoomer example now uses a precomputed trigonometric lookup
	  table

2025-10-19  Markus Gans  <guru.mail@muenster.de>
	* FVTerm's performance optimization reduces CPU cycle count

2025-10-09  Markus Gans  <guru.mail@muenster.de>
	* Some speed optimizations were made to the methods 
	  of the FString class
	* Add some methods to FString to improve its compatibility 
	  with the STL

2025-09-21  Markus Gans  <guru.mail@muenster.de>
	* The ConEmu, FPoint, FSize, and FRect classes have been refactored

2025-09-14  Markus Gans  <guru.mail@muenster.de>
	* Correct the use of "NSIG" in Cygwin

2025-09-13  Markus Gans  <guru.mail@muenster.de>
	* Classes in the event loop now have better safety and 
	  input validation

2025-08-31  Markus Gans  <guru.mail@muenster.de>
	* The key hash algorithm now uses an FNV-1a hash

2025-08-28  Markus Gans  <guru.mail@muenster.de>
	* Further FRingBuffer optimizations

2025-08-24  Markus Gans  <guru.mail@muenster.de>
	* Performance for FRingBuffer::back() has been optimized

2025-02-15  Markus Gans  <guru.mail@muenster.de>
	* Fixed FLineEdit label not shown again after hide() + show()

2025-02-09  Markus Gans  <guru.mail@muenster.de>
	* Significant speed-up when using FVTerm::copyArea with multiple 